--- a/app/src/main/res/layout/choose_city.xml
+++ b/app/src/main/res/layout/choose_city.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/first_city"
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
