--- a/app/src/main/res/layout/item_city_temperature.xml
+++ b/app/src/main/res/layout/item_city_temperature.xml
@@ -37,7 +37,7 @@
             android:id="@+id/night_temperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#CCD3DB"
+            android:textColor="@color/myNightTemperature"
             android:textSize="16sp"/>
 
     </LinearLayout>
