--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="myColorPrimary">#2979FF</color>
+    <color name="myColorPrimaryDark">#2962FF</color>
+    <color name="myColorAccent">#2962FF</color>
+    <color name="myColorButton">#2962FF</color>
+    <color name="myTextColor">#FFFFFF</color>
+    <color name="myBackgroundColor">#82B1FF</color>
+    <color name="myNightTemperature">#CCD3DB</color>
 </resources>
